# claudia

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  Justfile  LICENSE  README.md  admin.html  admin.py  agradecimientos.html  bootstrap_db.py  broadcast.py  check.html  docker-compose.yml  export.py  fly.toml  identity.py  index.html  launch.sh  legal.html  main.py  manual_admin.md  manual_usuario.md  pyproject.toml  rate_limiting.py  seats.py  state.py  stress_test.sh  test.js  test_fly.js  thanks.html  transfer.html
static/: manual_admin.md  site.webmanifest  ticket-card.js
technical_docs/: auditoria_tecnica.html
tests/: __init__.py  test_admin_stats.py  test_checkin.py  test_disable_identity_checks_quota.py  test_endpoints.py  test_session_expiration.py  test_transfer.py
tests/e2e/: conftest.py  test_booking_flow.py
tests/unit/: test_admin_resets.py  test_backup_retention.py  test_disable_identity_checks_quota.py  test_endpoints.py  test_session_expiration.py  test_transfer.py
