[project]
name = "claudia-espectacle-de-dansa"
version = "0.1.0"
description = "Reserva de seients a l'ateneu"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.136.1"
]

[tool.ruff.lint]
# Add "I" (isort) to the default rules (which are "E" and "F")
extend-select = ["I"]

[dependency-groups]
dev = [
    "prek>=0.4.4",
    "ruff>=0.15.16",
]
